src/components/Footer/Footer.module.css
@import "../../vars.css";

.container {
  color: var(--color-text);
  margin-top: 128px;
  background-color: var(--color-secondary);
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-evenly;
  width: 100%;
  padding: 5% 10%;
  gap: 10px;
}

.text h2 {
  font-size: 80px;
  font-weight: 700;
  letter-spacing: 4px;
}

.text p {
  font-size: 40px;
  font-weight: 400;
  letter-spacing: 2px;
}

.links {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  list-style: none;
  gap: 26px;
}

.link {
  display: flex;
  align-items: center;
  gap: 25px;
}

.link a {
    color: var(--color-text);
    font-size: 30px;
    font-weight: 400;
    text-decoration: none;
    letter-spacing: 1.5px;
}

@media screen and (max-width: 830px) {
  .container {
    flex-direction: column;
    gap: 23px;
  }

  .text {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .links {
    align-items: center;
  }
}

